cell03 ex00 move files

--- a/cell03/ex00/backgroound.html
+++ b/cell03/ex00/backgroound.html
@@ -7,7 +7,7 @@
 
 <body>
 <button onclick="changecolor()">Random Color !!</button>
-<script src="ex00/backgroound.js"></script>
+<script src="cell03/ex00/backgroound.js"></script>
 </body>
 
 </html>
