cell03 ex00 move files 2

--- a/cell03/ex00/backgroound.html
+++ b/cell03/ex00/backgroound.html
@@ -2,12 +2,12 @@
     <html>
         <head>
             <title>Change Background Color</title>
-            <link rel="stylesheet" href="ex00/backgroound.css">
+            <link rel="stylesheet" href="backgroound.css">
 </head>
 
 <body>
 <button onclick="changecolor()">Random Color !!</button>
-<script src="cell03/ex00/backgroound.js"></script>
+<script src="backgroound.js"></script>
 </body>
 
 </html>
