--- a/cell03/ex00/backgroound.html
+++ b/cell03/ex00/backgroound.html
@@ -7,6 +7,7 @@
 
 <body>
 <button onclick="changecolor()">Random Color !!</button>
+ คำสั่งสร้างปุ่ม
 <script src="backgroound.js"></script>
 </body>
 
