--- a/rush/index.html
+++ b/rush/index.html
@@ -3,37 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CVs</title>
+    <title>Let's Rush</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&display=swap" rel="stylesheet">
     <style>
         body {
-            background-color: #f8f9fa;
+            background-color: aquamarine;
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
             margin: 0;
         }
+
+        h1, h3 {
+            font-family: "Cal Sans", sans-serif;
+
+        }
+
         .container {
             text-align: center;
         }
-        .btn-primary {
-            margin: 10px;
-        }
+
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Welcome to My CV Showcase</h1>
-        <p class="lead">Please choose which CV you'd like to view:</p>
-        <a href="resume1.pdf" class="btn btn-primary btn-lg" target="_blank">View CV Version 1 (PDF)</a>
-        <a href="resume2.pdf" class="btn btn-primary btn-lg" target="_blank">View CV Version 2 (PDF)</a>
-        <p class="mt-3">Or view a detailed one-page resume:</p>
-        <a href="resume.html" class="btn btn-secondary btn-lg">View One-Page Resume (HTML)</a>
+    <div class="p-3 mb-2 bg-primary-subtle text-primary-emphasis">
+    <div class="container";>
+        <h1 class="text-primary">Welcome to our Rush Project ^_^</h1>
+        <h3 class="text-danger">Please choose the lucky one?</h3>
+        <a href="resumen.html" class="btn btn-success btn-lg" target="_blank">View CV rtidtaya</a>
+        <a href="resumep.html" class="btn btn-success btn-lg" target="_blank">View CV popitakt</a>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
